--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>antlr4-master</artifactId>
             <version>4.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>ST4</artifactId>
+            <version>4.0.8</version>
+        </dependency>
     </dependencies>
 </project>
