--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>antlr4-master</artifactId>
             <version>4.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
 </project>
